--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
             </ul>
-            <p class="text-center text-muted">© 2022 SeniorServ</p>
+            <p class="text-center text-muted">© 2022 mohamed hossam</p>
         </footer>
 
 
